--- a/src/components/ArticleCard.module.css
+++ b/src/components/ArticleCard.module.css
@@ -1,14 +1,18 @@
 .main {
+    position: relative;
     margin-top: 10px;
     width: 80%;
     height: 200px;
-    background-color: aqua;
+    background-color: rgb(255, 123, 16);
     border-radius: 20px;
     padding: 20px;
     box-sizing: border-box;
     overflow: hidden;
-    transition: all .2s;
     display: flex;
+}
+
+.showDetails {
+    height: auto;
 }
 
 .image {
@@ -22,7 +26,6 @@
 }
 
 .details {
-    position: relative;
     flex: 0 0 70%;
     padding: 0 10px;
 }
@@ -46,14 +49,41 @@
     text-overflow: ellipsis;
 }
 
-.details span {
+span {
     position: absolute;
-    bottom: 0px;
+    bottom: 10px;
     right: 40px;
     cursor: pointer;
-    border-bottom: 1px solid #00FFFF;
+    border-bottom: 1px solid rgb(255, 123, 16);
+    transition: all .4s;
 }
 
-.details span:hover {
+span:hover {
     border-bottom: 1px solid black;
+}
+
+.full {
+    font-size: 18px;
+}
+
+.full img {
+    width: 100%;
+}
+
+.info {
+    border-top: 2px solid black;
+    font-size: 14px;
+    margin: 30px 0;
+}
+
+.info p {
+    margin: 0;
+}
+
+.time {
+    text-align: end;
+}
+
+.hideImage {
+    display: none;
 }
